syntax = "proto3";

package ua.marchenko.commonmodels.general;

option java_multiple_files = true;

message BigDecimal {
  int32 scale = 1;
  BigInteger int_val = 2;

  message BigInteger {
    bytes value = 1;
  }
}
